--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,9 @@
-<app-nav></app-nav>
+<header>
+  <app-nav></app-nav>
+</header>
 <main>
   <router-outlet></router-outlet>
 </main>
-<app-footer></app-footer>
+<footer>
+  <app-footer></app-footer>
+</footer>
