--- a/src/app/legal-notice/legal-notice.component.scss
+++ b/src/app/legal-notice/legal-notice.component.scss
@@ -1,40 +1,27 @@
-
 @import "../../mixin.scss";
 @import "../../styles.scss";
 
-
-
 :host {
-    @include flex-center($jc:flex-start);
-    width: 100%;
-    height: 100%;
-  }
+  @include flex-center($jc: flex-start);
+  width: 100%;
+  height: calc(100vh - 196px);
+  max-width: $max-width;
+}
 
-  .back-button {
-    position: absolute;
-    top: 10px; 
-    left: 10px; 
-    z-index: 1000; 
-   cursor: pointer; 
-  }
-  
-  .imprintContainer{
-    font-family: Arial, sans-serif;
-    line-height: 1.6;
-    margin: 20px;
-  
-  }
-  .backIcon{
-    width: 50px;
-  }
-  .headerImprint{
-    color: #333;
-  }
-  .imprint {
-    // background-color: #f9f9f9;
-    padding: 20px;
-    border-radius: 8px;
-   
-   
-  }
-  
+.imprintContainer {
+ 
+  font-family: Arial, sans-serif;
+  line-height: 1.6;
+  margin: 20px;
+}
+.backIcon {
+  width: 50px;
+}
+.headerImprint {
+  color: #333;
+}
+.imprint {
+
+  padding: 20px;
+  border-radius: 8px;
+}
