--- a/src/app/main-conten/contact/contact.component.scss
+++ b/src/app/main-conten/contact/contact.component.scss
@@ -1,31 +1,31 @@
 @import "../../../mixin.scss";
 @import "../../../styles.scss";
-
+* {
+  transition: all 125ms ease-out;
+}
 :host {
-  @include flex-center($fd:column);
-max-width: $max-width;
-
+  @include flex-center($fd: column);
+  max-width: $max-width;
 }
 
-.header-contact{
-  @include flex-center($jc:flex-start,$ai:flex-end);
+.header-contact {
+  @include flex-center($jc: flex-start, $ai: flex-end);
   width: 100%;
-  >img{
-    width:5rem ;
+  > img {
+    width: 5rem;
     margin-left: 1rem;
   }
   > h2 {
     @include fonts();
   }
 }
-.form-container{
+.form-container {
   width: 100%;
   max-width: $max-width;
 }
 .contact-header {
   @include flex-center($jc: flex-start, $ai: flex-end);
   margin: 2rem 0;
-
 
   .arrow {
     margin-left: 2rem;
@@ -35,14 +35,11 @@ max-width: $max-width;
   }
 }
 
-
 form {
- 
   display: flex;
-  flex-wrap: wrap; 
+  flex-wrap: wrap;
   padding: 2rem 0;
   position: relative;
-
 
   .form-left {
     @include flex-center($fd: column, $ai: flex-start, $jc: space-between);
@@ -51,32 +48,39 @@ form {
     width: 100%;
 
     p {
-      @include fonts($fc:$turquoise,$fs:$f-s-18);
+      @include fonts($fc: $turquoise, $fs: $f-s-18);
     }
   }
 
   .form-right {
     flex: 1 1;
-    @include flex-center($fd: column, $ai: flex-start,$jc:flex-end);
+    @include flex-center($fd: column, $ai: flex-start, $jc: flex-end);
     margin-left: 1rem;
+    > div:nth-child(1) {
+      width: 100%;
+      @include flex-center($jc: space-between);
 
+      > div:nth-child(1) {
+        @include flex-center($ai: flex-start, $fd: column);
+      }
+    }
 
     a {
-      @include fonts($fc:$turquoise,$fs:$f-s-20);
+      @include fonts($fc: $turquoise, $fs: $f-s-20);
       @include flex-center();
 
       .letter {
         margin-right: 0.5rem;
-        width: 1.48rem; 
-        height: 1.25rem; 
-        background: url("../../../assets/img/letter.svg") center center / contain
-          no-repeat;
+        width: 1.48rem;
+        height: 1.25rem;
+        background: url("../../../assets/img/letter.svg") center center /
+          contain no-repeat;
       }
 
       .phone {
         margin-right: 0.5rem;
-        width: 1.78rem; 
-        height: 1.45rem; 
+        width: 1.78rem;
+        height: 1.45rem;
         background: url("../../../assets/img/phone.svg") center center / contain
           no-repeat;
       }
@@ -93,7 +97,6 @@ form {
       }
     }
   }
-
 
   textarea {
     width: 100%;
@@ -125,7 +128,7 @@ form {
 
   input[type="text"],
   input[type="email"] {
-    height:3.5rem;
+    height: 3.5rem;
     width: 100%;
     box-sizing: border-box;
     background: transparent;
@@ -136,7 +139,6 @@ form {
     font-size: $f-s-14;
     color: $turquoise;
     line-height: 140%;
-   
 
     &::placeholder {
       font-family: $font-primary;
@@ -154,16 +156,16 @@ form {
   }
 
   .privacy {
-    @include fonts($fc:$turquoise,$fs:$f-s-14);
+    @include fonts($fc: $turquoise, $fs: $f-s-14);
     margin-top: 1rem;
     width: 100%;
-    @include flex-center($jc:flex-start);
-  
+    @include flex-center($jc: flex-start);
+
     input[type="checkbox"] {
       margin-right: 0.5rem;
       appearance: none;
       -webkit-appearance: none;
-      width: 1.125rem; 
+      width: 1.125rem;
       height: 1.125rem;
       border: 2px solid $primary-red;
       border-radius: 3px;
@@ -172,30 +174,29 @@ form {
       &:hover {
         background: $turquoise;
       }
-  
+
       &:checked {
-        background:$turquoise ;
+        background: $turquoise;
         position: relative;
-        
+
         &::after {
-          content: '';
+          content: "";
           position: absolute;
-          top: 0.125rem;  
-          left: 0.3125rem;  
+          top: 0.125rem;
+          left: 0.3125rem;
           width: 0.1875rem;
           height: 0.375rem;
           border: solid $primary-red;
           border-width: 0 2px 2px 0;
           transform: rotate(45deg);
         }
-
       }
     }
-  
+
     a {
       color: $primary-red;
       margin: 0 0.5rem;
-  
+
       &:hover {
         text-decoration: underline;
       }
@@ -206,26 +207,43 @@ form {
     cursor: not-allowed;
     filter: grayscale(100%);
     pointer-events: none;
-    opacity: 0.5; 
+    opacity: 0.5;
   }
-  
-  
-.button-container{
+
+  .button-container {
     width: 100%;
-    @include flex-center($jc:flex-end);
-   > button {
-    @include fonts($fs:$f-s-18);
-    margin-top: 1.5rem;
-    background: transparent;
-    border: 2px solid $turquoise;
-    color:$primary-red;
-    padding: 0.6rem 1.2rem;
-    cursor: pointer;
-
-
-  }  
+    @include flex-center($jc: flex-end);
+    > button {
+      @include fonts($fs: $f-s-18);
+      margin-top: 1.5rem;
+      background: transparent;
+      border: 2px solid $turquoise;
+      color: $primary-red;
+      padding: 0.6rem 1.2rem;
+      cursor: pointer;
+    }
+  }
 }
 
+.icon {
+  width: 1.375rem;
+  height: 3.125rem;
+  padding: 0.625rem;
+  background-image: url("../../../assets/img/arrow up .svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  background-origin: content-box;
+  transform: rotate(0deg); 
+  transition: all 125ms ease-out;
+  border: 0.0625rem solid transparent;
+
+  &:hover {
+    border-color: $turquoise;
+    background-image: url("../../../assets/img/arrow-up-hover.svg");
+    background-size: contain;
+    background-origin: content-box;
+  }
 }
 
 
@@ -233,32 +251,29 @@ form {
   margin-top: 1rem;
   position: relative;
   width: 100%;
-  
-  @include flex-center();
-  
 
+  @include flex-center();
 }
 
 .validation-icon {
   position: absolute;
   top: 50%;
-  right: 0.75rem; 
+  right: 0.75rem;
   transform: translateY(-50%);
   width: 1.25rem;
   height: 1.25rem;
 }
-.validation-icon-message{
+.validation-icon-message {
   position: absolute;
- top: 10%;
-  right: 0.75rem; 
+  top: 10%;
+  right: 0.75rem;
   width: 1.25rem;
   height: 1.25rem;
 }
 
-
 input.error::placeholder,
 textarea.error::placeholder {
-  font-weight:$regular !important;
+  font-weight: $regular !important;
   color: $error-red !important;
   opacity: 100% !important;
 }
