--- a/src/app/main-conten/skills/skills.component.scss
+++ b/src/app/main-conten/skills/skills.component.scss
@@ -1,6 +1,8 @@
 @import "../../../mixin.scss";
 @import "../../../styles.scss";
-
+* {
+  transition: all 125ms ease-out;
+}
 :host {
   @include flex-center();
   width: 100%;
