--- a/src/app/main-conten/testimonials/testimonials.component.scss
+++ b/src/app/main-conten/testimonials/testimonials.component.scss
@@ -1,5 +1,8 @@
 @import "../../../mixin.scss";
 @import "../../../styles.scss";
+*{
+  transition: all 125ms ease-out;
+}
 
 :host {
   @include flex-center($fd:column);
