--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -1,6 +1,6 @@
 @import "../../../mixin.scss";
 @import "../../../styles.scss";
-
+*{transition: all 125ms ease-out;}
 :host {
   @include flex-center($jc: space-between);
   width: 100%;
