--- a/src/app/main-conten/about/about.component.html
+++ b/src/app/main-conten/about/about.component.html
@@ -68,6 +68,6 @@
         />
       </div>
     </div>
-    <div><a href="">Let’s talk</a></div>
+    <div><a href="#contact">Let’s talk</a></div>
   </div>
 </div>
