--- a/src/app/main-conten/hero/hero.component.html
+++ b/src/app/main-conten/hero/hero.component.html
@@ -1,10 +1,10 @@
 <header>
   <div class="hero-left">
     <div>
-      <a href="">CONTACT ME</a>
+      <a href="#contact">CONTACT ME</a>
 
       <div class="arrow-container">
-        <a class="icon" href="#"></a>
+        <a class="icon" href="#contact"></a>
       </div>
     </div>
     <div>
