--- a/src/app/main-conten/main-content/main-content.component.html
+++ b/src/app/main-conten/main-content/main-content.component.html
@@ -1,9 +1,11 @@
-<app-hero></app-hero>
-<app-about></app-about>
-<app-skills></app-skills>
+<app-hero id="hero"></app-hero>
+<app-about id="about"></app-about>
+<app-skills id="skills"></app-skills>
 <h2>My Projects</h2>
-<ng-container *ngFor="let project of projects; let i = index">
-  <app-projects [project]="project" [isRowReverse]="i % 2 === 1"></app-projects>
-</ng-container>
-<app-testimonials></app-testimonials>
-<app-contact></app-contact>
+<section id="projects">
+  <ng-container *ngFor="let project of projects; let i = index">
+    <app-projects [project]="project" [isRowReverse]="i % 2 === 1"></app-projects>
+  </ng-container>
+</section>
+<app-testimonials id="testimonials"></app-testimonials>
+<app-contact id="contact"></app-contact>
