--- a/src/app/shared/nav/nav.component.html
+++ b/src/app/shared/nav/nav.component.html
@@ -1,10 +1,10 @@
 <nav>
   <ul>
     <li><a href="#">&lt;FG&gt;</a></li>
-    <li><a href="#">Why me</a></li>
-    <li><a href="#">Skills</a></li>
-    <li><a href="#">Projects</a></li>
-    <li><a href="#">Contact</a></li>
+    <li><a href="#about">Why me</a></li>
+    <li><a href="#skills">Skills</a></li>
+    <li><a href="#projects">Projects</a></li>
+    <li><a href="#contact">Contact</a></li>
   </ul>
   <span>
     <p>DE</p>
