feat: Created mobile design, started navbar, and added burger menu

--- a/src/app/main-conten/about/about.component.html
+++ b/src/app/main-conten/about/about.component.html
@@ -16,8 +16,11 @@
     </div>
     <div class="icon-container">
       <div>
+        <div class="maobile-arrow-curve-left">
+          <img src="assets/img/arrow-curve-left .svg" alt="">
+        </div>
         <h3>I am</h3>
-        <div class="locaishen-container">
+        <div class="locaishen-container display-flex">
           <div>
             <img src="assets/img/locaishen-sign .svg" alt="" />
             <div class="elipse"></div>
@@ -29,7 +32,7 @@
         </div>
       </div>
       <div>
-        <div class="suitcase-container">
+        <div class="suitcase-container display-flex">
           <img
             class="arrow-curve-left"
             src="assets/img/arrow-curve-left .svg"
@@ -44,7 +47,7 @@
       </div>
 
       <div>
-        <div class="laptop">
+        <div class="laptop display-flex">
           <img src="assets/img/remote-signal.svg" alt="" />
           <img
             class="signal"
@@ -67,6 +70,9 @@
           alt=""
         />
       </div>
+    </div>
+    <div class="maobile-arrow-curve-right">
+      <img src="assets/img/arrow-curve-right.svg" alt="">
     </div>
     <div><a href="#contact">Let’s talk</a></div>
   </div>
