--- a/src/app/main-conten/contact/contact.component.html
+++ b/src/app/main-conten/contact/contact.component.html
@@ -67,7 +67,7 @@
   </div>
 
   <div class="form-right">
-    <div>
+    <div class="mail-tel">
       <div>
         <a href="mailto:geissq@gmail.com.com">
           <div class="letter"></div>
@@ -121,5 +121,26 @@
     <button type="submit" [disabled]="!isChecked || contactForm.invalid">
       Senden
     </button>
+  </div>
+  <div>
+    <div class="arrow-container show">
+      <a class="icon" href="#"></a>
+    </div>
+  </div>
+  <div class="mail-tel-mobile show">
+    <div>
+      <div>
+        <a href="mailto:geissq@gmail.com.com">
+          <div class="letter"></div>
+          <span>E-mail: geissq&#64;gmail.com</span>
+        </a>
+      </div>
+      <div>
+        <a href="tel:015222492773">
+          <div class="phone"></div>
+          <span>Tel: 0152 224 927 73</span>
+        </a>
+      </div>
+    </div>
   </div>
 </form>
