--- a/src/app/main-conten/about/about.component.scss
+++ b/src/app/main-conten/about/about.component.scss
@@ -6,6 +6,7 @@
   width: 100%;
   height: 100%;
 }
+
 .main-container {
   @include flex-center($jc: space-between, $ai: normal);
   width: 100%;
@@ -52,13 +53,10 @@
 .icon-container {
   width: 85%;
   position: relative;
+
   > div {
     @include flex-center();
     width: 100%;
-
-    > div {
-      @include flex-center();
-    }
   }
 
   .locaishen-container {
@@ -167,3 +165,14 @@
     }
   }
 }
+
+
+.display-flex{
+  @include flex-center();
+}
+
+.maobile-arrow-curve-left,.maobile-arrow-curve-right{
+  display: none;
+}
+
+
