--- a/src/app/main-conten/testimonials/testimonials.component.html
+++ b/src/app/main-conten/testimonials/testimonials.component.html
@@ -1,6 +1,6 @@
 <div class="main-container">
   <h4>Need a teamplayer? Here what my colleagues said about me</h4>
-  <div>
+  <div class="text-container-main">
     <div>
       <img src="assets/img/arrow-curve-left-big.svg" alt="" />
       <div class="text-container">
