--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,3 +1,10 @@
+<div class="middle-container-mobile show">
+  <div>
+    <a href="legal-notice">Legal Notice <br></a>
+    <a href="privacy-policy">Privacy Policy</a>
+  </div>
+</div>
+
 <div class="logo">
   <a href="" target="_blank" rel="noopener noreferrer">&lt;FG&gt;</a>
   <p>Frontend developer</p>
@@ -11,14 +18,25 @@
   </div>
 </div>
 
-<div class="icon-container">
-  <a href="https://gist.github.com/FelixGeiss" target="_blank" rel="noopener noreferrer">
-    <div class="git-hup"></div>
-  </a>
-  <a href="mailto:geissq@gmail.com" target="_blank" rel="noopener noreferrer">
-    <div class="email"></div>
-  </a>
-  <a href="https://www.linkedin.com/in/felix-geiss-3a2b46270/" target="_blank" rel="noopener noreferrer">
-    <div class="linkedin"></div>
-  </a>
-</div>
+
+  <div class="icon-container">
+    <a
+      href="https://gist.github.com/FelixGeiss"
+      target="_blank"
+      rel="noopener noreferrer"
+    >
+      <div class="git-hup"></div>
+    </a>
+    <a href="mailto:geissq@gmail.com" target="_blank" rel="noopener noreferrer">
+      <div class="email"></div>
+    </a>
+    <a
+      href="https://www.linkedin.com/in/felix-geiss-3a2b46270/"
+      target="_blank"
+      rel="noopener noreferrer"
+    >
+      <div class="linkedin"></div>
+    </a>
+  </div>
+  
+
