--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,7 +4,6 @@ html {
   width: 100%;
 }
 
-
 // color
 
 $backround-blue: #120b35;
@@ -19,7 +18,7 @@ $regular: 400;
 $medium: 500;
 $bold: 700;
 
-$l-height:120%;
+$l-height: 120%;
 
 @font-face {
   font-family: "handjet";
@@ -56,7 +55,6 @@ $l-height:120%;
 }
 
 //   Layout-Variablen
-
 
 $gap-170: 10.625rem;
 $gap-105: 6.56rem;
@@ -108,8 +106,6 @@ $align-stretch: stretch;
 $grow-1: 1;
 $nowrap: nowrap;
 
-
-
 body {
   margin: 0;
   box-sizing: border-box;
@@ -117,6 +113,9 @@ body {
   background-color: $backround-blue;
   width: 100%;
   height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 main {
@@ -135,7 +134,7 @@ main {
   }
 }
 
-footer{
+footer {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -184,16 +183,174 @@ p {
 
 @media (max-width: 992px) {
   html {
-    font-size: 10px;
+    font-size: 9px;
   }
 }
 @media (max-width: 768px) {
   html {
-    font-size: 8px;
+    font-size: 7px;
   }
 }
-// @media (max-width: 576px) {
-//   html {
-//     font-size: 14px;
-//   }
-// }
+@media (max-width: 575px) {
+  html {
+    font-size: 14px;
+  }
+  main {
+    margin: 0;
+  }
+  h1 {
+    white-space: normal !important;
+    text-align: center !important;
+  }
+  h2 {
+    white-space: normal !important;
+    text-align: center !important;
+  }
+
+  header {
+    flex-direction: column-reverse !important;
+    align-items: center !important;
+    .icon {
+      display: none !important;
+    }
+    a {
+      display: none !important;
+    }
+
+    .hero-left {
+      width: fit-content;
+    }
+  }
+  .main-container {
+    align-items: center !important;
+    flex-direction: column !important;
+    .img-container {
+      display: none !important;
+    }
+
+    h4 {
+      display: none;
+    }
+  }
+
+  .icon-container {
+    display: flex;
+    flex-direction: column;
+    width: 100% !important;
+
+
+    > div:nth-child(1) {
+      flex-direction: column;
+    }
+
+    h3 {
+      position: relative !important;
+    }
+  }
+  .about-right {
+    align-items: center !important;
+    width: 100% !important;
+    > div:nth-child(1) {
+      p {
+        text-align: center;
+      }
+    }
+    h2 {
+      text-align: center !important;
+    }
+  }
+  .arrow-curly {
+    display: none;
+  }
+  .arrow-curve-left {
+    display: none;
+  }
+
+  .arrow-curve-right {
+    display: none;
+  }
+  .suitcase-container {
+    margin-left: 0 !important;
+  }
+
+  .maobile-arrow-curve-left{
+    width: 100%;
+    justify-content: flex-start!important;
+  }
+  .maobile-arrow-curve-right{
+    display: flex;
+    width: 100%;
+    justify-content: flex-end;
+    >img{
+      transform: scaleY(-1);
+    }
+  }
+
+  .project-container {
+    flex-direction: column !important;
+    align-items: center !important;
+  }
+
+  .text-container {
+    width: 100% !important;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    h5 {
+      text-align: center;
+    }
+  }
+
+  .text-container-main {
+    // overflow-x: auto;
+    display: none !important;
+  }
+
+  .header-contact {
+    justify-content: center !important;
+    img {
+      display: none;
+    }
+  }
+  form {
+    flex-direction: column !important;
+    width: 100%;
+  }
+  .form-right {
+    margin: 0 !important;
+    flex-direction: column-reverse !important;
+
+  }
+  .form-left{
+    p{
+      text-align: center;
+    }
+  }
+  .button-container {
+    justify-content: center !important;
+  }
+  .image-container {
+    width: 100% !important;
+  }
+  app-footer {
+    flex-direction: column-reverse;
+  }
+  app-nav{
+    justify-content: flex-end !important;
+  }
+  .mail-tel{
+    display: none !important;
+  }
+  .show{
+    display: flex !important;
+  }
+  .display-none{
+    display: none!important;
+  }
+  .middle-container{
+    display: none !important;
+  }
+  .maobile-arrow-curve-left,.maobile-arrow-curve-right{
+    display: flex !important;
+  }
+}
