--- a/src/app/main-conten/projects/projects.component.html
+++ b/src/app/main-conten/projects/projects.component.html
@@ -1,10 +1,25 @@
-<div class="project-container" [ngStyle]="{'flex-direction': isRowReverse ? 'row-reverse' : 'row'}">
+<div
+  class="project-container"
+  [ngStyle]="{ 'flex-direction': isRowReverse ? 'row-reverse' : 'row' }"
+>
   <div class="image-container">
-    <img [src]="project.imageUrl" alt="{{ project.title }}">
+    <!-- <img [src]="project.videoUrl" alt="{{ project.title }}"> -->
+    <a [href]="project.liveTestLink" target="_blank">
+      <video
+        #hoveredVideo
+        muted
+        preload="metadata"
+        (mouseenter)="playVideo()"
+        (mouseleave)="resetVideo()"
+      >
+        <source [src]="project.videoUrl" type="video/mp4" />
+        Dein Browser unterstützt das Video-Tag nicht.
+      </video>
+    </a>
   </div>
   <div class="text-container">
     <h3>{{ project.title }}</h3>
-    <h5 class="technologies">{{ project.technologies.join(' | ') }}</h5>
+    <h5 class="technologies">{{ project.technologies.join(" | ") }}</h5>
     <h5 class="description">{{ project.description }}</h5>
     <div class="links">
       <a [href]="project.githubLink" target="_blank">Github</a>
