--- a/src/app/shared/nav/nav.component.scss
+++ b/src/app/shared/nav/nav.component.scss
@@ -1,8 +1,5 @@
-
 @import "../../../mixin.scss";
 @import "../../../styles.scss";
-
-*{transition: all 125ms ease-out;}
 
 :host {
   @include flex-center();
@@ -21,17 +18,16 @@
 
 nav {
   @include flex-center($jc: space-between);
-  @include fonts($fs:$f-s-22);
+  @include fonts($fs: $f-s-22);
   max-width: $max-width;
   width: 100%;
   margin: $gap-24 $gap-105;
   white-space: nowrap;
- 
 
   > ul {
     @include flex-center($gp: $gap-48);
     > li:first-child {
-      @include fonts($fs:$f-s-48,$ff:$font-logo,$fw:$bold);
+      @include fonts($fs: $f-s-48, $ff: $font-logo, $fw: $bold);
     }
 
     > li:not(:first-child) {
@@ -40,34 +36,31 @@ nav {
       }
     }
   }
-    
 }
 
-span{
-    @include flex-center();
-    @include fonts($fs:$f-s-22);
-    p {
-        margin: 0;
-        &:hover {
-          color: $turquoise;
-          cursor: pointer;
-        }
-      }
+span {
+  @include flex-center();
+  @include fonts($fs: $f-s-22);
+  p {
+    margin: 0;
+    &:hover {
+      color: $turquoise;
+      cursor: pointer;
+    }
+  }
 }
 
-
-/* Container-Element */
 .burger-menu {
+  display: none;
   position: relative;
 }
 
-/* Button-Styling */
 .burger-menu button {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  width: 35px;
-  height: 35px;
+  @include flex-center($fd:column, $jc:space-around);
+  display: none;
+  position: relative;
+  width: 30px;
+  height: 30px;
   background: transparent;
   border: none;
   cursor: pointer;
@@ -75,62 +68,65 @@ span{
   z-index: 100;
 }
 
-/* Styling der Burger-Linien */
 .burger-menu button span {
   display: block;
   width: 100%;
   height: 4px;
-  background:$primary-red;
+  background: $primary-red;
   border-radius: 2px;
-  transition: all 0.3s ease-in-out;
+  transition: all 125ms ease-out;
 }
 
-/* Transformation, wenn das Menü geöffnet ist */
-/* Obere Linie dreht sich */
 .burger-menu.open button span:nth-child(1) {
   transform: translateY(10px) rotate(45deg);
 }
 
-/* Mittlere Linie wird ausgeblendet */
 .burger-menu.open button span:nth-child(2) {
   opacity: 0;
 }
 
-/* Untere Linie dreht sich */
 .burger-menu.open button span:nth-child(3) {
   transform: translateY(-10px) rotate(-45deg);
 }
 
-/* Stil des Dropdown-Menüs */
 .burger-menu ul {
- 
+  position: fixed;
+  top: 0px;
+  left: 0;
+  width: 100vw;
+  max-width: none;
   list-style: none;
-  padding: 0;
   margin: 0;
-  position: absolute;
-  top: 38px;
-  right: -92px;
-  background: #fff;
-  box-shadow: 0 2px 5px rgba(0,0,0,0.2);
-  
+  padding: 0;
+  background: #0b042d;
+  background: linear-gradient(
+    179deg,
+    rgba(11, 4, 45, 1) 0%,
+    rgba(40, 22, 128, 1) 100%
+  );
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+  z-index: 10;
+  @include flex-center($fd: column, $jc: flex-end);
+  height: 280px;
 }
 
-/* Listeneinträge */
 .burger-menu ul li {
   padding: 10px 20px;
+  display: flex;
+  justify-content: center;
 }
 
-/* Links */
 .burger-menu ul li a {
   text-decoration: none;
-  @include fonts($fs:$f-s-22);
+  @include fonts($fs: $f-s-22);
   display: block;
 }
 
-/* Optional: Hover-Effekt */
 .burger-menu ul li a:hover {
-  background-color: #f0f0f0;
+  text-decoration: underline;
+  background-color: transparent;
 }
-.logo-mobile{
-  @include fonts($fs:$f-s-48,$ff:$font-logo,$fw:$bold);
+.logo-mobile {
+  @include fonts($fs: $f-s-48, $ff: $font-logo, $fw: $bold);
+  display: none;
 }
