--- a/src/app/main-conten/about/about.component.html
+++ b/src/app/main-conten/about/about.component.html
@@ -1,13 +1,13 @@
 <div class="main-container">
   <div class="abot-left">
     <div class="img-container">
-      <img src="assets/img/Felix-ai.png" alt="" />
+      <img src="assets/img/b-img2.png" alt="" />
     </div>
   </div>
   <div class="about-right">
     <div>
       <h2>Why me</h2>
-      <p>
+      <p class="margin-L margin-R">
         Write some information about yourself that is IT related. Why are you
         passionate about coding? Highlight your motivation for professional
         growth and continuous learning. Emphasise your strong problem-solving
@@ -16,7 +16,7 @@
     </div>
     <div class="icon-container">
       <div>
-        <div class="maobile-arrow-curve-left">
+        <div class="maobile-arrow-curve-left w-90">
           <img src="assets/img/arrow-curve-left .svg" alt="">
         </div>
         <h3>I am</h3>
@@ -71,7 +71,7 @@
         />
       </div>
     </div>
-    <div class="maobile-arrow-curve-right">
+    <div class="maobile-arrow-curve-right w-90">
       <img src="assets/img/arrow-curve-right.svg" alt="">
     </div>
     <div><a href="#contact">Let’s talk</a></div>
