--- a/src/app/main-conten/hero/hero.component.html
+++ b/src/app/main-conten/hero/hero.component.html
@@ -7,12 +7,12 @@
         <a class="icon" href="#contact"></a>
       </div>
     </div>
-    <div>
-      <h2>FRONTEND DEVELOPER</h2>
-      <h1>Felix Geiss</h1>
+    <div class="hero-text">
+      <h2 class="margin-R margin-L">FRONTEND DEVELOPER</h2>
+      <h1 class="margin-R margin-L">Felix Geiss</h1>
     </div>
   </div>
   <div class="img-container">
-    <img src="assets/img/Felix-ai.png" alt="" />
+    <img src="assets/img/b-img1.png" alt="" />
   </div>
 </header>
