--- a/src/app/main-conten/skills/skills.component.html
+++ b/src/app/main-conten/skills/skills.component.html
@@ -35,12 +35,28 @@
     </div>
     <div>
       <img src="assets/img/material-design.svg" alt="Material Design" />
-      <h6>Material <br> design</h6>
+      <h6>
+        Material <br />
+        design
+      </h6>
     </div>
     <div class="challenge-container">
       <img src="assets/img/challenge-me.svg" alt="Challenge me" />
-      <h6>Challenge <br> me</h6>
-      <p>I am always happy to learn new technologies, just tell me what you need.</p>
+      <h6>
+        Challenge <br />
+        me
+      </h6>
+      <p>
+        I am always happy to learn new technologies, just tell me what you need.
+      </p>
     </div>
+  </div>
+
+  <div class="mobile-challenge-me show margin-L margin-R">
+    <img src="assets/img/arrow-mobile.svg" alt="" />
+    <p>
+      I am always happy to learn new technologies, just tell me what you need.
+    </p>
+    <div><a href="#contact">Let’s talk</a></div>
   </div>
 </div>
