--- a/src/app/main-conten/testimonials/testimonials.component.scss
+++ b/src/app/main-conten/testimonials/testimonials.component.scss
@@ -23,11 +23,11 @@
     }
   }
   img {
-    width: $img-w-82;
+    width: 5.375rem;
   }
 }
 
-.text-container {
+.text-container-testimonials{
   padding: 0px 0.875rem;
 }
 
