--- a/src/app/main-conten/testimonials/testimonials.component.html
+++ b/src/app/main-conten/testimonials/testimonials.component.html
@@ -3,7 +3,7 @@
   <div class="text-container-main">
     <div>
       <img src="assets/img/arrow-curve-left-big.svg" alt="" />
-      <div class="text-container text-container-testimonials">
+      <div class="text-container-testimonials">
         <h4>Noah Mueller</h4>
         <h5>Project Sharkie</h5>
         <p>
@@ -12,7 +12,7 @@
         </p>
       </div>
     </div>
-    <div class="text-container text-container-testimonials">
+    <div class="text-container-testimonials">
       <h4>Evelyn Marx</h4>
       <h5>roject Pollo Loco</h5>
       <p>
@@ -20,7 +20,7 @@
         deadlines. Structured work and clear code. ‘’
       </p>
     </div>
-    <div class="text-container text-container-testimonials">
+    <div class="text-container-testimonials">
       <h4>James Rugman</h4>
       <h5>Project Join</h5>
       <p>
